syntax = "proto3";

package ark_wallet.v1;

import "ark_wallet/v1/types.proto";
import "google/api/annotations.proto";

service Service {
  // Balance returns offchain balance.
  rpc Balance(BalanceRequest) returns (BalanceResponse) {
    option (google.api.http) = {
      get: "/v1/balance"
    };
  };
  // Info returns info about the HD wallet.
  rpc Info(InfoRequest) returns (InfoResponse) {
    option (google.api.http) = {
      get: "/v1/info"
    };
  };
  // Receive requested amount on requested invoice.
  rpc Receive(ReceiveRequest) returns (ReceiveResponse) {
    option (google.api.http) = {
      post: "/v1/receive"
      body: "*"
    };
  };
  // Send requested amount to requested invoice.
  rpc Send(SendRequest) returns (SendResponse) {
    option (google.api.http) = {
      post: "/v1/send"
      body: "*"
    };
  };
  // Transactions returns virtual transactions history
  rpc Transactions(TransactionsRequest) returns (TransactionsResponse) {
    option (google.api.http) = {
      post: "/v1/transactions"
      body: "*"
    };
  };
}

message BalanceRequest {}
message BalanceResponse {
  // total balance in sats
  string amount = 1;
}

message InfoRequest {}
message InfoResponse {
  enum Network {
    NETWORK_UNSPECIFIED = 0;
    NETWORK_MAINNET = 1;
    NETWORK_TESTNET = 2;
    NETWORK_REGTEST = 3;
  }
  // the network of the wallet
  Network network = 1;
  // list containing info about the wallet accounts.
  AccountInfo account = 2;
  // info about the current version of the ark wallet.
  BuildInfo build_info = 3;
}

message TransactionsRequest {}
message TransactionsResponse {
  // list containing all transactions
  repeated TransactionInfo transactions = 1;
}

message ReceiveRequest {
  // requested amount
  string amount = 1;
  // requested invoice
  string invoice = 2;
}
message ReceiveResponse {
  // id of round transaction
  string round_id = 1;
}

message SendRequest {
  // requested amount
  string amount = 1;
  // requested invoice
  string invoice = 2;
}
message SendResponse {
  // id of round transaction
  string round_id = 1;
}